added component for rating section, then added to the routing, also added a handle click from the sports selection section, this allows for the sport to be selected and the rating rendered, added a componenet for the current weather section, then added a link to the NavBar. ToDo the current NavBar is just for testing, it needs to be changed so the user can't navigate completely through the application, a button needs to be added with a function to link to the current weather from the rating section. All is functioning and operational

--- a/src/App.css
+++ b/src/App.css
@@ -5,3 +5,7 @@
   background: linear-gradient(0deg, rgb(54, 83, 230) 0%, rgba(62,96,214,1) 60%, rgba(44,44,219,1) 100%);
   color: white;
 }
+
+.current-rating {
+  color: blue;
+}
