updated project to now operate with context, all current files have been updated to use context, so no changes to the functionality of the app should be seen, a few basic updates were made to the CSS to insure it's functionality with the component

--- a/src/App.css
+++ b/src/App.css
@@ -5,11 +5,13 @@
   background: linear-gradient(0deg, rgb(54, 83, 230) 0%, rgba(62,96,214,1) 60%, rgba(44,44,219,1) 100%);
   color: white;
 }
+/* .nav-bar {
 
+} */
 /* .about-section {
 
 } */
 
 .current-rating {
-  color: blue;
+  color: black;
 }
