--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,120 @@
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
+
 .App {
-  text-align: center;
+  height: 100%;
+  height: 100%;
+  position: absolute;
+  left: 0;
+  width: 100%;
+  overflow: hidden;
+  background-color: #1f2987;
+  font-family: 'Bebas Neue', cursive;
 }
-.search {
-  background: linear-gradient(0deg, rgb(54, 83, 230) 0%, rgba(62,96,214,1) 60%, rgba(44,44,219,1) 100%);
+/* .App body {
+  height: 100%;
+} */
+
+.nav-bar ul{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  color: white;
+  background-color: #0b1667;
+  border-bottom: solid white 1px;
+  padding: 10px;
+  margin: 0px;
+  list-style: none;
+}
+.nav-bar li a {
+  list-style: none;
+  text-decoration: none;
+  background-color: none;
   color: white;
 }
-/* .nav-bar {
+.location-section {
+  height: 100%;
+  display: flex;
+  justify-content: center;
+}
+.location-container {
+  text-align: center;
+  color: white;
+  align-items: center;
+}
 
-} */
+.search h1 {
+  padding: 10px;
+}
+.searchBox {
+  position: absolute;
+  top: 40%;
+  left: 50%;
+  transform:  translate(-50%,50%);
+  background: #2f3640;
+  height: 40px;
+  border-radius: 40px;
+  padding: 10px;
+
+}
+
+.searchBox:hover > .searchInput {
+  width: 240px;
+  padding: 0 6px;
+}
+
+.searchBox:hover > .searchButton {
+background: white;
+color : #2f3640;
+}
+
+.searchButton {
+  color: white;
+  float: right;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background: #2f3640;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: 0.4s;
+}
+
+.searchInput {
+  border:none;
+  background: none;
+  outline:none;
+  float:left;
+  padding: 0;
+  color: white;
+  font-size: 16px;
+  transition: 0.4s;
+  line-height: 40px;
+  width: 0px;
+
+}
+
+@media screen and (max-width: 620px) {
+.searchBox:hover > .searchInput {
+  width: 150px;
+  padding: 0 6px;
+}
+}
+
+
+.footer p {
+  background-color: #0b1667;
+  border-top: solid white 1px;
+  margin: 0pX;
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  color: white;
+  text-align: center;
+
+}
 /* .about-section {
 
 } */
