--- a/src/App.css
+++ b/src/App.css
@@ -112,19 +112,24 @@ color : #2f3640;
   margin: 0px;
 }
 
-.select-sport {
+.select-sport-header {
   text-align: center;
   color: white;
 }
 
 .sport-buttons {
   margin: 5% 20% 5% 20%;
-  display: flex;
-  justify-content: center;
+  /* display: flex;
+  justify-content: center; */
 }
 
-.sports-buttons button {
-  padding: 10p;
+.sport-btn-container img {
+  width: 100px;
+  height: 100px;
+}
+.sport-btn-container img:hover {
+  width: 120px;
+  height: 120px;
 }
 
 /* .about-section {
