CSS for current weather page is finished

--- a/src/App.css
+++ b/src/App.css
@@ -211,24 +211,25 @@ color : #2f3640;
   grid-template-columns: repeat(12, 1fr);
   grid-template-rows: 110px 110px 110px 110px;
 }
+.current-weather-grid-container p {
+  margin: 0px;
+}
 .current-weather-grid-container h1 {
   grid-column: span 12;
   text-align: center;
 }
 
 .current-weather-temp {
-  grid-column-start: 2;
+  grid-column-start: 3;
   grid-column-end: 6;
   grid-row-start: 2;
   grid-row-end: 3;
 }
 .current-weather-temp p:nth-child(1) {
   font-size: 2em;
-  margin: 0px;
 }
 .current-weather-temp p:nth-child(2) {
   font-size: 0.7em;
-  margin: 0px
 }
 .current-weather-temp p:nth-child(3) {
   font-size: 0.7em;
@@ -240,7 +241,7 @@ color : #2f3640;
 }
 
 .current-weather-icon-des {
-  grid-column-start: 8;
+  grid-column-start: 9;
   grid-column-end: 12;
   grid-row-start: 2;
   grid-row-end: 3;
@@ -252,21 +253,62 @@ color : #2f3640;
 
 .current-weather-feels-like {
   font-size: 0.6em;
-  margin: 0px;
 }
 
 .current-weather-pop {
-  grid-column-start: 2;
+  grid-column-start: 3;
   grid-column-end: 11;
   grid-row-start: 3;
   grid-row-end: 4;
-  margin: 0px;
 }
 .current-weather-pop img {
   width: 40px;
   height: 40px;
 }
-.current-weather-btm {
-grid-column-start: 2;
-grid-column-end: 11;
+.current-weather-vis {
+  grid-column-start: 9;
+  grid-column-end: 12;
+  grid-row-start: 3;
+  grid-row-end: 4;
+}
+
+/* .weather-btm-container {
+  grid-column-start: 3;
+  grid-column-end: 11;
+  grid-row-start: 4;
+  grid-row-end: 5;
+  display: flex;
+  justify-content: space-between;
+} */
+
+.current-weather-wind {
+  grid-column-start: 3;
+  grid-column-end: 5;
+  grid-row-start: 4;
+  grid-row-end: 5;
+}
+.current-weather-wind img {
+  width: 40px;
+  height: 40px;
+}
+
+.current-weather-hum {
+  grid-column-start: 6;
+  grid-column-end: 8;
+  grid-row-start: 4;
+  grid-row-end: 5;
+}
+.current-weather-hum img {
+  width: 40px;
+  height: 40px;
+}
+.current-weather-uvi {
+  grid-column-start: 9;
+  grid-column-end: 11;
+  grid-row-start: 4;
+  grid-row-end: 5;
+}
+.current-weather-uvi img {
+  width: 40px;
+  height: 40px;
 }
