--- a/src/App.css
+++ b/src/App.css
@@ -1,18 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
 
 .App {
-  height: 100%;
-  height: 100%;
-  position: absolute;
-  left: 0;
-  width: 100%;
-  overflow: hidden;
-  background-color: #1f2987;
   font-family: 'Bebas Neue', cursive;
+  background-color: #1f2987;
+  height: 100vh;
 }
-/* .App body {
-  height: 100%;
-} */
 
 .nav-bar ul {
   background-color: #2F3740;
@@ -25,24 +17,26 @@
   padding: 10px;
   margin: 0px;
   list-style: none;
+  font-family: 'Bebas Neue', cursive;
 }
+
 .nav-bar li a {
   list-style: none;
   text-decoration: none;
   color: white;
 }
+
 .location-section {
   text-align: center;
-  color: white
+  color: white;
+  padding-top: 5%;
 }
-.location-response {
-  margin-top: 60%;
-}
+
 .location-header h1 {
-  padding: 1%;
   font-size: 4em;
-  margin: 2%;
+  margin: 0px;
 }
+
 .searchBox {
   position: absolute;
   top: 40%;
@@ -88,7 +82,6 @@ color : #2f3640;
   transition: 0.4s;
   line-height: 40px;
   width: 0px;
-
 }
 
 @media screen and (max-width: 620px) {
@@ -96,6 +89,15 @@ color : #2f3640;
   width: 150px;
   padding: 0 6px;
 }
+}
+
+.about-section {
+  color: #fff;
+  text-align: center;
+  padding-top: 5%;
+}
+.about-section h1 {
+  margin: 0px;
 }
 
 .footer {
@@ -117,6 +119,11 @@ color : #2f3640;
 .select-sport-header {
   text-align: center;
   color: white;
+  padding-top: 5%;
+}
+.select-sport-header h1 {
+  margin: 0px;
+  padding-bottom: 5%;
 }
 
 .sport-buttons {
@@ -139,8 +146,8 @@ color : #2f3640;
 .rating-des-container {
  background-color: #2F3740;
  color: white;
- width: 500px;
- height: 430px;
+ width: 80%;
+ height: 420px;
  margin-top: 2%;
  border-radius: 10%;
 }
@@ -148,6 +155,7 @@ color : #2f3640;
   text-align: center;
   box-sizing: border-box;
  }
+
 .circle-container {
   display: flex;
   justify-content: center;
@@ -168,6 +176,15 @@ color : #2f3640;
 .rating-params {
   margin-left: 10%;
 }
+.rating-params h2 {
+  margin-top: 5%;
+  font-size: 1.3em;
+}
+
+.rating-params p {
+  margin: 1%;
+}
+
 .rate-btn {
   display: flex;
   justify-content: center;
@@ -201,15 +218,15 @@ color : #2f3640;
 .current-weather-des-container {
   background-color: #2F3740;
   color: white;
-  width: 500px;
-  height: 440px;
+  width: 80%;
+  height: auto;
   margin-top: 2%;
   border-radius: 10%;
 }
 .current-weather-grid-container {
   display: grid;
   grid-template-columns: repeat(12, 1fr);
-  grid-template-rows: 110px 110px 110px 110px;
+  grid-template-rows: auto auto auto auto;
 }
 .current-weather-grid-container p {
   margin: 0px;
@@ -224,6 +241,7 @@ color : #2f3640;
   grid-column-end: 6;
   grid-row-start: 2;
   grid-row-end: 3;
+  margin-bottom: 8%;
 }
 .current-weather-temp p:nth-child(1) {
   font-size: 2em;
@@ -260,6 +278,7 @@ color : #2f3640;
   grid-column-end: 11;
   grid-row-start: 3;
   grid-row-end: 4;
+  margin-bottom: 5%;
 }
 .current-weather-pop img {
   width: 40px;
@@ -286,6 +305,7 @@ color : #2f3640;
   grid-column-end: 5;
   grid-row-start: 4;
   grid-row-end: 5;
+  margin-bottom: 5%;
 }
 .current-weather-wind img {
   width: 40px;
