--- a/src/App.css
+++ b/src/App.css
@@ -112,6 +112,7 @@ color : #2f3640;
   text-align: center;
   display: flex;
 }
+
 .footer p {
   margin: 0px;
 }
@@ -121,6 +122,7 @@ color : #2f3640;
   color: white;
   padding-top: 5%;
 }
+
 .select-sport-header h1 {
   margin: 0px;
   padding-bottom: 5%;
@@ -129,10 +131,12 @@ color : #2f3640;
 .sport-buttons {
   margin: 5% 20% 5% 20%;
 }
+
 .sport-btn-container img {
   width: 100px;
   height: 100px;
 }
+
 .sport-btn-container img:hover {
   width: 120px;
   height: 120px;
@@ -147,19 +151,22 @@ color : #2f3640;
  background-color: #2F3740;
  color: white;
  width: 80%;
- height: 420px;
+ height: auto;
+ min-height: 200px;
  margin-top: 2%;
  border-radius: 10%;
 }
+
 .rating-des-container h1 {
   text-align: center;
   box-sizing: border-box;
- }
+}
 
 .circle-container {
   display: flex;
   justify-content: center;
 }
+
 .rate-circle {
   border-radius: 50%;
   width: 55px;
@@ -173,9 +180,11 @@ color : #2f3640;
   justify-content: center;
   align-items: center;
 }
+
 .rating-params {
   margin-left: 10%;
 }
+
 .rating-params h2 {
   margin-top: 5%;
   font-size: 1.3em;
@@ -189,6 +198,7 @@ color : #2f3640;
   display: flex;
   justify-content: center;
 }
+
 .rate-btn button {
   font: 'Bebas Neue', cursive;
   padding: 0.8em 1.4em;
@@ -202,19 +212,23 @@ color : #2f3640;
   cursor: pointer;
   outline: none;
 }
+
 .rate-btn button:hover {
   background-color: #b8b81e;
   box-shadow: 0px 15px 20px rgba(46, 229, 157, 0.4);
   color: #fff;
   transform: translateY(-7px);
 }
+
 .rate-btn button:hover {
   transform: translateY(-1px);
 }
+
 .current-weather-main-container {
   display: flex;
   justify-content: center;
 }
+
 .current-weather-des-container {
   background-color: #2F3740;
   color: white;
@@ -331,4 +345,10 @@ color : #2f3640;
 .current-weather-uvi img {
   width: 40px;
   height: 40px;
+}
+
+.crt-weather-load {
+  grid-column-start: 3;
+  grid-column-end: 10;
+  padding-bottom: 10%;
 }
