--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
 
 .App {
-  font-family: 'Bebas Neue', cursive;
+  font-family: 'Bebas Neue', sans-serif;
   background-color: #1f2987;
   min-height: 100vh;
   height: auto;
@@ -18,7 +18,8 @@
   padding: 10px;
   margin: 0px;
   list-style: none;
-  font-family: 'Bebas Neue', cursive;
+  font-family: 'Bebas Neue', sans-serif;
+  font-size: 1.4em;
 }
 
 .nav-bar li a {
@@ -30,22 +31,26 @@
 .location-section {
   text-align: center;
   color: white;
-  padding-top: 5%;
+  padding-top: 8%;
+}
+
+.location-section p {
+  font-size: 1.5em;
 }
 
 .location-header h1 {
-  font-size: 4em;
+  font-size: 6em;
   margin: 0px;
 }
 
 .searchBox {
   position: absolute;
-  top: 40%;
+  top: 50%;
   left: 50%;
   transform:  translate(-50%,50%);
   background: #2f3640;
   height: 40px;
-  border-radius: 40px;
+  border-radius: 60px;
   padding: 10px;
 }
 
@@ -75,12 +80,13 @@ color : #2f3640;
 .searchInput {
   border:none;
   background: none;
-  outline:none;
-  float:left;
-  padding: 0;
+  outline: none;
+  float: left;
+  padding: 0px;
   color: white;
-  font-size: 16px;
-  transition: 0.4s;
+  font-size: 1.3em;
+  font-family: 'Bebas Neue', sans-serif;
+  transition: 0.5s;
   line-height: 40px;
   width: 0px;
 }
@@ -95,11 +101,17 @@ color : #2f3640;
 .about-section {
   color: #fff;
   text-align: center;
-  padding-top: 5%;
+  padding-top: 4%;
 }
 
 .about-section h1 {
+  font-size: 2.4em;
   margin: 0px;
+}
+
+.about-section p {
+  font-size: 1.3em;
+  margin: 2% 10% 2% 10%;
 }
 
 .footer {
@@ -122,12 +134,13 @@ color : #2f3640;
 .select-sport-header {
   text-align: center;
   color: white;
-  padding-top: 5%;
+  padding-top: 4%;
 }
 
 .select-sport-header h1 {
   margin: 0px;
   padding-bottom: 5%;
+  font-size: 2.4em;
 }
 
 .sport-buttons {
@@ -143,87 +156,3 @@ color : #2f3640;
   width: 120px;
   height: 120px;
 }
-
-.rating-main-container {
-  display: flex;
-  justify-content: center;
-}
-
-.rating-des-container {
- background-color: #2F3740;
- color: white;
- width: 80%;
- height: auto;
- min-height: 200px;
- margin-top: 2%;
- border-radius: 10%;
-}
-
-.rating-des-container h1 {
-  text-align: center;
-  box-sizing: border-box;
-}
-
-.circle-container {
-  display: flex;
-  justify-content: center;
-}
-
-.rate-circle {
-  border-radius: 50%;
-  width: 55px;
-  height: 55px;
-  padding: 10px;
-  background: #2F3740;
-  border: 3px solid rgb(255, 255, 255);
-  color: white;
-  text-align: center;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.rating-params {
-  margin-left: 10%;
-}
-
-.rating-params h2 {
-  margin-top: 5%;
-  font-size: 1.3em;
-}
-
-.rating-params p {
-  margin: 1%;
-}
-
-.rate-btn {
-  display: flex;
-  justify-content: center;
-  margin-bottom: 5%;
-}
-
-.rate-btn button {
-  font: 'Bebas Neue', cursive;
-  padding: 0.8em 1.4em;
-  text-transform: uppercase;
-  color: #000;
-  background-color: #fff;
-  border: none;
-  border-radius: 45px;
-  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
-  transition: all 0.3s ease 0s;
-  cursor: pointer;
-  outline: none;
-}
-
-.rate-btn button:hover {
-  background-color: #b8b81e;
-  box-shadow: 0px 15px 20px rgba(46, 229, 157, 0.4);
-  color: #fff;
-  transform: translateY(-7px);
-}
-
-.rate-btn button:hover {
-  transform: translateY(-1px);
-}
-
