--- a/src/components/CurrentWeather/CurrentWeather.css
+++ b/src/components/CurrentWeather/CurrentWeather.css
@@ -1,49 +1,70 @@
 
-.current-weather-main-container {
+  .current-weather-main-container {
     display: flex;
     justify-content: center;
   }
   
-  .current-weather-des-container {
+  .current-weather-second-container {
     background-color: #2F3740;
     color: white;
     width: 80%;
-    height: auto;
-    margin-top: 2%;
-    border-radius: 10%;
+    margin-top: 4%;
+    margin-bottom: 30%;
+    border-radius: 16%;
   }
+
   .current-weather-grid-container {
     display: grid;
     grid-template-columns: repeat(12, 1fr);
     grid-template-rows: repeat(4, auto);
   }
-  .current-weather-grid-container p {
-    margin: 0px;
-  }
-  .current-weather-grid-container h1 {
+
+  .current-weather-grid-header {
+    grid-row-start: 1;
+    grid-row-end: 2;
     grid-column: span 12;
     text-align: center;
+    margin: 0px;
+    padding: 2%;
   }
-  
+  .current-weather-grid-header h1 {
+    margin: 0px;
+  }
+
+  .weather-not-loaded {
+    grid-column: span 12;
+    height: 400px;
+    text-align: center;
+  }
+
   .current-weather-temp {
     grid-column-start: 3;
     grid-column-end: 7;
     grid-row-start: 2;
     grid-row-end: 3;
     margin-bottom: 8%;
+    text-align: center;
+    border: solid 1px;
   }
+  .current-weather-temp p {
+    margin: 1%;
+  }   
+  
   .current-weather-temp p:nth-child(1) {
+    font-size: 3em;
+  }
+
+  .current-weather-temp p:nth-child(2) {
     font-size: 2em;
   }
-  .current-weather-temp p:nth-child(2) {
-    font-size: 0.7em;
-  }
+
   .current-weather-temp p:nth-child(3) {
-    font-size: 0.7em;
+    font-size: 1em;
     margin: 8% 0% 0% 0%;
   }
+
   .current-weather-temp p:nth-child(4) {
-    font-size: 0.7em;
+    font-size: 1em;
     margin: 0% 0% 0% 0%;
   }
   
@@ -53,14 +74,16 @@
     grid-row-start: 2;
     grid-row-end: 3;
     text-align: center;
+    font-size: 1.6em;
+  }
+
+  .current-weather-icon-des img {
+    width: 80px;
+    height: 80px;
   }
   
   .current-weather-des {
     margin-left: 10%;
-  }
-  
-  .current-weather-feels-like {
-    font-size: 0.6em;
   }
   
   .current-weather-pop {
@@ -71,13 +94,15 @@
     margin-bottom: 5%;
     text-align: center;
   }
+
   .current-weather-pop p {
-    font-size: 1em;
+    font-size: 1.3em;
+    margin: 2%;
   }
 
   .current-weather-pop img {
-    width: 40px;
-    height: 40px;
+    width: 50px;
+    height: 50px;
   }
 
   .current-weather-vis {
@@ -89,8 +114,13 @@
   }
 
   .current-weather-vis img {
-    width: 40px;
-    height: 40px;
+    width: 50px;
+    height: 50px;
+  }
+
+  .current-weather-vis p {
+    font-size: 1.3em;
+    margin: 2%;
   }
   
   .current-weather-wind {
@@ -100,11 +130,16 @@
     grid-row-end: 5;
     margin-bottom: 5%;
     text-align: center;
-    font-size: 1em;
   }
+
   .current-weather-wind img {
-    width: 40px;
-    height: 40px;
+    width: 50px;
+    height: 50px;
+  }
+
+  .current-weather-wind p {
+    font-size: 1.3em;
+    margin: 2%;
   }
   
   .current-weather-hum {
@@ -119,6 +154,12 @@
     width: 40px;
     height: 40px;
   }
+
+  .current-weather-hum p {
+    font-size: 1.3em;
+    margin: 5%;
+  }
+
   .current-weather-uvi {
     grid-column-start: 9;
     grid-column-end: 11;
@@ -128,12 +169,11 @@
     font-size: 1em;
   }
   .current-weather-uvi img {
-    width: 40px;
-    height: 40px;
+    width: 50px;
+    height: 50px;
   }
-  
-  .crt-weather-load {
-    grid-column-start: 3;
-    grid-column-end: 10;
-    padding-bottom: 10%;
+
+  .current-weather-uvi p {
+    font-size: 1.3em;
+    margin: 5%;
   }
