--- a/src/components/CurrentWeather/CurrentWeather.css
+++ b/src/components/CurrentWeather/CurrentWeather.css
@@ -8,6 +8,7 @@
     background-color: #2F3740;
     color: white;
     width: 80%;
+    max-width: 900px;
     margin-top: 4%;
     margin-bottom: 30%;
     border-radius: 16%;
@@ -42,7 +43,7 @@
     grid-column-end: 7;
     grid-row-start: 2;
     grid-row-end: 3;
-    margin-bottom: 8%;
+    margin-bottom: 12%;
     text-align: center;
     border: solid 1px;
   }
@@ -74,7 +75,7 @@
     grid-row-start: 2;
     grid-row-end: 3;
     text-align: center;
-    font-size: 1.6em;
+    font-size: 2.2em;
   }
 
   .current-weather-icon-des img {
@@ -91,7 +92,7 @@
     grid-column-end: 5;
     grid-row-start: 3;
     grid-row-end: 4;
-    margin-bottom: 5%;
+    margin-bottom: 12%;
     text-align: center;
   }
 
@@ -128,7 +129,7 @@
     grid-column-end: 6;
     grid-row-start: 4;
     grid-row-end: 5;
-    margin-bottom: 5%;
+    margin-bottom: 12%;
     text-align: center;
   }
 
