--- a/src/App.css
+++ b/src/App.css
@@ -54,6 +54,8 @@
   height: 40px;
   border-radius: 60px;
   padding: 10px;
+  width: 300px;
+  padding: 0 6px;
 }
 
 .searchBox:hover > .searchInput {
