--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,8 @@
 
 .App {
   font-family: 'Bebas Neue', sans-serif;
-  background-color: #1f2987;
+  /* background-color: #1f2987; */
+  background-color: #2D4B73;
   min-height: 100vh;
   height: auto;
 }
@@ -64,7 +65,7 @@
 }
 
 .searchBox:hover > .searchButton {
-background: #b8b81e;
+background: #516F73;
 color : #2f3640;
 }
 
