--- a/temp_backup/App.css
+++ b/temp_backup/App.css
@@ -47,15 +47,16 @@
 }
 
 .searchBox {
-  position: relative;
-  margin: 20px auto;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform:  translate(-50%,50%);
   background: #2f3640;
   height: 40px;
   border-radius: 60px;
+  padding: 10px;
   width: 300px;
   padding: 0 6px;
-  display: flex;
-  align-items: center;
 }
 
 .searchBox:hover > .searchInput {
